# nba-player-prop-prediction-model

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/: ISSUES_TEMPLATE.md
data/: active_players_names.txt
src/: contraints.py  get_current_players.py  get_player_suffix.py  lookup.py  player_scraper.py  team_scraper.py
tests/: test_scrapers.py
