[metadata]
name = nba_player_performance_prediction
version = 0.1.0
description = A project to predict NBA player performance
long_description = file: README.rst
author = Your Name
author_email = your.email@example.com
url = https://github.com/asap-blocky/nba-player-performance-prediction-model
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    numpy
    requests
    beautifulsoup4
    lxml

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    nba-player-prediction = nba_player_performance_prediction.main:main
